--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "pimple/pimple": "^3.2",
         "league/oauth2-client": "^2.4",
         "symfony/cache": "^4.3",
-        "jaeger/querylist": "^4.1"
+        "jaeger/querylist": "^4.1",
+        "predis/predis": "^1.1"
     },
     "autoload": {
         "psr-4": {
